--- a/isTriangle.html
+++ b/isTriangle.html
@@ -10,7 +10,7 @@
      <!-- FONT AWESOME -->
      <script src="https://kit.fontawesome.com/1465705b72.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
