fixed footer links

--- a/area.html
+++ b/area.html
@@ -44,8 +44,8 @@
     <footer>
         
       <a href="https://github.com/kirti2602"><i class="fab fa-github"></i></a>
-      <a href="https://www.linkedin.com/in/kirti-sharma123/"><i class="fab fa-twitter"></i></a>
-      <a href="https://twitter.com/KirtiSh123"><i class="fab fa-linkedin"></i></a>
+      <a href="https://twitter.com/KirtiSh123"><i class="fab fa-twitter"></i></a>
+      <a href="https://www.linkedin.com/in/kirti-sharma123/"><i class="fab fa-linkedin"></i></a>
       <p>© Kirti Sharma 2021</p> 
     </footer>
       
